--- a/test/fixtures/accounts.yml
+++ b/test/fixtures/accounts.yml
@@ -1,11 +1,12 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+<% require 'digest' %>
 
 one:
   id: 1
   owner_id: 1
-  fingerprint: <%= Digest.SHA256('account1') %> 
+  fingerprint: <%= Digest::SHA256.hexdigest('account1') %> 
 
 two:
   id: 2
   owner_id: 2
-  fingerprint: <%= Digest.SHA256('account2') %>
+  fingerprint: <%= Digest::SHA256.hexdigest('account2') %>
